--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -4,10 +4,18 @@
     [data-colors="btn-darkblue"] {
         color: #ffffff;
         background-color: $color-darkblue;
+
+        &:hover {
+            color: $color-darkblue;
+        }
     }
 
     [data-colors="btn-mint"] {
         color: #ffffff;
         background-color: $color-mint;
+
+        &:hover {
+            color: $color-darkblue;
+        }
     }
 }
