details item add

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,12 +3,16 @@
 .AppWrapper {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 
-    .MuiContainer-root {
-        @include for-phone-only {
-            padding-left: 0px;
-            padding-right: 0px;
-        }
-    }
+    // .MuiContainer-root {
+    //     @include for-phone-only {
+    //         padding-left: 0px;
+    //         padding-right: 0px;
+    //     }
+    // }
 
 
+}
+
+.inline-block {
+    display: inline-block;
 }
