--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,8 @@
 .main-naw {
+    header {
+        background-color: #f5f5f5;
+    }
+
     .MuiToolbar-root {
         display: flex;
         flex-direction: row;
