--- a/src/components/UI/errorIndicator/errorIndicator.scss
+++ b/src/components/UI/errorIndicator/errorIndicator.scss
@@ -1,4 +1,5 @@
-.icon-wrapp {
-  padding: 5px;
-  margin-bottom: 15px;
+.error-mess-wrapp {
+  padding: 20px 50px;
+  max-width: 400px;
+  margin: auto;
 }
