--- a/src/components/ItemDetails/itemDetails.scss
+++ b/src/components/ItemDetails/itemDetails.scss
@@ -52,6 +52,10 @@
         padding: 10px 5px;
         width: 100%;
 
+        .flex-tem {
+            width: 50%;
+        }
+
     }
 
     .map-link-block {
@@ -64,6 +68,15 @@
         height: 100%;
         display: flex;
         align-items: center;
+        text-align: right;
+        justify-content: flex-end;
+
+        a {
+            color: inherit;
+            text-decoration: none;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
     }
 
     .item-header-wrap {
